# sp-23-24

./: .gitmodules  README.md
mastermind/: .gitignore  CMakeLists.txt
mastermind/include/datatypes/: _code.h  _feedback.h  _game_state.h  _guess.h  _string.h  datatypes.h
mastermind/include/game/: game.h  secret_code.h
mastermind/src/: CMakeLists.txt  datatypes.c  game.c  secret_code.c
mastermind/src/datatypes/: CMakeLists.txt  code.c  datatypes.c  feedback.c  guess.c  string.c
mastermind/src/include/: datatypes.h
mastermind/test/: CMakeLists.txt  test_datatypes.cpp
